Fix: z-index style

--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ body {
 /* ANKI 模式：自动滚动 + 隐藏滚动条 */
 body.anki-mode {
     overflow-x: hidden;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE */
 }
@@ -317,6 +317,12 @@ body::-webkit-scrollbar-thumb {
 .dict-iframe {
     width: 100%;
     border: none;
+}
+
+.simple-divider {
+    height: 1px;
+    background: var(--el-border-color);
+    margin: 0 10px;
 }
 
 /* element-plus 自定义样式 */
